fixed bugs -> Send message button doesn’t render properly on mobile devices #2  and suggestion -> Quote of the day bug #3

--- a/client/public/css/portfolio-comms.css
+++ b/client/public/css/portfolio-comms.css
@@ -128,23 +128,13 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40%;
+  width: 35%;
   text-align: center;
   background:#425766;
   border-radius: 10px;
   padding-left:10px;
   padding-right:10px;
 
-}
-.sub-component-large {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 60%;
-  text-align: center;
-  /*background:#425766;*/
-  border-radius: 10px;
 }
 
 .sub-component-large {
@@ -153,7 +143,7 @@ p {
   flex-direction : column;
   justify-content: center;
   align-items: center;
-  width: 60%;
+  width: 65%;
   text-align: center;
   /*background:#425766;*/
   border-radius: 10px;
@@ -398,6 +388,40 @@ p {
   font-weight: bold;
   opacity: 0.85;
 }
+
+@media (max-width: 1400px) {
+  .sub-component-large {
+    height: 100%;
+    display: flex;
+    flex-direction : column;
+    justify-content: center;
+    align-items: center;
+    width: 75%;
+    text-align: center;
+    /*background:#425766;*/
+    border-radius: 10px;
+  }
+
+  p {
+    color: #2A373F;
+    font-size: 1.1rem; 
+    line-height: 1.6;
+    margin: 0px;
+  }
+  .sub-component-small{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    text-align: center;
+    background:#425766;
+    border-radius: 10px;
+    padding-left:10px;
+    padding-right:10px;
+
+  }
+}
   
 @media (max-width: 920px) {
   /* convert menu to a collabpsible menu at this width */
@@ -425,7 +449,7 @@ p {
     gap: 30px;
   }
   .sub-component-small {
-    width: 95%;
+    width: 70%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -461,7 +485,7 @@ p {
     border-radius: 10px;
   }
   .projectimg {
-    width: 80%;
+    width: 70%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -520,7 +544,7 @@ p {
     gap: 30px;
   }
   .sub-component-small {
-    width: 95%;
+    width: 70%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -556,3 +580,4 @@ p {
     font-size: 2rem;
   }
 }
+
